--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -80,7 +80,25 @@
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3" padding="1em unset">
                         <wm-tabs name="tabsProjectDetails">
-                            <wm-tabpane name="tabpaneMEMBERS" title="MEMBERS"></wm-tabpane>
+                            <wm-tabpane name="tabpaneMEMBERS" title="MEMBERS">
+                                <wm-livegrid formlayout="dialog" name="livegridProjectMembers">
+                                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.ProjectSharedWithData.dataSet" navigation="Classic" name="gridProjectMembers">
+                                        <wm-grid-column-group name="group1" caption="Shared To">
+                                            <wm-grid-column binding="usersByProjectSharedWithUser.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                            <wm-grid-column binding="usersByProjectSharedWithUser.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                        </wm-grid-column-group>
+                                        <wm-grid-column binding="projectSharedOn" caption="Project Shared On" type="timestamp" generator="assigned" datepattern="yyyy-MM-dd hh:mm a" formatpattern="toDate" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column-group name="group" caption="Shared By">
+                                            <wm-grid-column binding="usersByProjectSharedBy.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                            <wm-grid-column binding="usersByProjectSharedBy.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
+                                        </wm-grid-column-group>
+                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
+                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                    </wm-grid>
+                                </wm-livegrid>
+                            </wm-tabpane>
                             <wm-tabpane name="tabpaneTASKS" title="TASKS"></wm-tabpane>
                             <wm-tabpane name="tabpaneDOCUMENTS" title="DOCUMENTS"></wm-tabpane>
                             <wm-tabpane name="tabpane4" title="MESSAGING"></wm-tabpane>
@@ -96,4 +114,23 @@
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewAddMember">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Add Members" iconclass="wi wi-file-text" name="dialogAddMember">
+            <wm-layoutgrid name="layoutgrid3">
+                <wm-gridrow name="gridrow11" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn11_1">
+                        <wm-search name="searchForMembers" dataset="bind:Variables.GetAllUsers.dataSet" searchkey="email" displaylabel="email" displayimagesrc="photo" datafield="All Fields"></wm-search>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow12" padding="1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn13" horizontalalign="center">
+                        <wm-button class="btn-default btn-primary" caption="Add" type="button" margin="unset 0.5em" name="buttonAddMember" iconclass="wi wi-person-add" on-click="Variables.AddMembersToProject.invoke()"></wm-button>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions1">
+                <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button1"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
