Add member Availablity to CreatedBy and (MunicipalityAdmin or CXAdmin) Files modified - [ViewProject.js,ViewProject.html,ViewProject.variables.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.html
+++ b/src/main/webapp/pages/ViewProject/ViewProject.html
@@ -92,10 +92,7 @@
                                             <wm-grid-column binding="usersByProjectSharedBy.firstName" caption="First Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
                                             <wm-grid-column binding="usersByProjectSharedBy.lastName" caption="Last Name" type="string" generator="assigned" readonly="true" show="true" related-entity-name="Users"></wm-grid-column>
                                         </wm-grid-column-group>
-                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
-                                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="editRow()" disabled="false"></wm-grid-row-action>
-                                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                                        <wm-grid-action key="addNewRow" display-name="New" show="bind:addMember" class="btn-primary" iconclass="wi wi-plus" title="New" action="Widgets.dialogAddMember.open()" shortcutkey="" disabled="false"></wm-grid-action>
                                     </wm-grid>
                                 </wm-livegrid>
                             </wm-tabpane>
