updated add shared with dialog to prevent blank/incomplete entries Files modified - [Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -284,9 +284,8 @@
                                                         <wm-layoutgrid columns="1" name="layoutgrid4">
                                                             <wm-gridrow name="gridrow12">
                                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                                                    <wm-form-field name="usersBySharedWithUser" displayname="Who would you like to share this form with?" show="true" primary-key="false" generator="assigned" key="usersBySharedWithUser" type="list" is-related="true" required="required" widget="autocomplete"
-                                                                    placeholder="Search by Name or Email Address" displaylabel="bind:$[data[$i].fullName] + ' (' + $[data[$i].email] + ')'" searchkey="email,fullName" orderby="email:desc" dataset="bind:Variables.GetPeople.dataSet"
-                                                                    datafield="All Fields"></wm-form-field>
+                                                                    <wm-form-field name="usersBySharedWithUser" displayname="Who would you like to share this form with?" show="true" primary-key="false" generator="assigned" key="usersBySharedWithUser" type="list" is-related="true" widget="autocomplete" placeholder="Search by Name or Email Address"
+                                                                    displaylabel="bind:$[data[$i].fullName] + ' (' + $[data[$i].email] + ')'" searchkey="email,fullName" orderby="fullName:asc" dataset="bind:Variables.GetPeople.dataSet" datafield="All Fields"></wm-form-field>
                                                                 </wm-gridcolumn>
                                                             </wm-gridrow>
                                                         </wm-layoutgrid>
@@ -294,7 +293,7 @@
                                                         <wm-form-field name="createdOn" displayname="Created On" show="false" primary-key="false" generator="assigned" key="createdOn" type="timestamp" widget="timestamp" placeholder="Select date time" outputformat="timestamp" defaultvalue="bind:today"></wm-form-field>
                                                         <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                                         <wm-form-field name="usersByCreatedBy" displayname="Users By Created By" show="false" primary-key="false" generator="assigned" key="usersByCreatedBy" type="list" is-related="true" widget="select" placeholder="Select value" defaultvalue="bind:Variables.CurrentUserDetails.dataSet"></wm-form-field>
-                                                        <wm-form-action key="save" display-name="Add" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Add" disabled="false" type="submit" update-mode="true"></wm-form-action>
+                                                        <wm-form-action key="save" display-name="Add" show="true" class="form-save btn-primary" iconclass="wi wi-plus" title="Add" type="submit" update-mode="true" disabled="bind:!Widgets.usersBySharedWithUser.datavalue.id"></wm-form-action>
                                                         <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                                     </wm-liveform>
                                                 </wm-livegrid>
