- Fixing Captcha problems Files modified - [UserCreation.html,FormService.java,UserCreation.variables.json,prefabProperties.properties,prefabPropertiesMetadata.json]

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -172,7 +172,7 @@
                             </wm-gridrow>
                             <wm-gridrow name="gridrow19" padding="2em unset unset unset">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn29_1" horizontalalign="left">
-                                    <wm-prefab prefabname="Google_reCAPTCHA" name="Google_reCAPTCHA1"></wm-prefab>
+                                    <wm-prefab prefabname="Google_reCAPTCHA" name="Google_reCAPTCHA1" sitekey="6LcNeBUUAAAAAE7ACQkzLMRlZ4kHI9-ebthTlQ61"></wm-prefab>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
